# simple-auth-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
src/: main.py  settings.py
src/database/models/: users.py
src/database/reposiotries/: base.py  beanie_repository.py
src/routers/: main_router.py
src/routers/admin/: router.py
src/routers/users/: router.py
src/services/: create_app.py  middleware.py
src/services/auth/: auth_logic.py  crud.py  hash_password.py  jwt_service.py
src/services/crud/: base_service.py
