[project]
name = "auth-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "beanie>=1.29.0",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.11.3",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
